--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
   "name": "cordova-plugin-exitapp",
-  "version": "1.0.0",
-  "description": "Implements navigator.app.exitApp on WP8, Android",
+  "version": "1.1.0",
+  "description": "Implements navigator.app.exitApp on Android and iOS",
   "cordova": {
     "id": "kr.co.joycorp.cordova.exitapp",
     "platforms": [
-      "wp8",
       "android",
       "ios"
     ]
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rakesh-walisheter/cordova-plugin-exitapp.git"
+    "url": "git+github.com/RafaelFantato/cordova-plugin-exitapp.git"
   },
   "keywords": [
     "cordova",
-	"exit",
+    "exit",
     "terminate",
     "ecosystem:cordova",
-    "cordova-wp8",
-    "cordova-android"
+    "cordova-android",
     "cordova-ios"
   ],
   "author": "Rakesh Walisheter",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/rakesh-walisheter/cordova-plugin-exitapp/issues"
+    "url": "github.com/RafaelFantato/cordova-plugin-exitapp/issues"
   },
-  "homepage": "https://github.com/rakesh-walisheter/cordova-plugin-exitapp#readme"
+  "homepage": "github.com/RafaelFantato/cordova-plugin-exitapp#readme"
 }
